--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -91,6 +91,7 @@ SET(PODOFO_HEADERS
     PdfColor.h
     PdfContents.h
     PdfContentsTokenizer.h
+    PdfContentsGraph.h
     PdfData.h
     PdfDataType.h
     PdfDate.h
@@ -152,6 +153,7 @@ SET(PODOFO_HEADERS
     PdfTTFWriter.h
     PdfVariant.h
     PdfVecObjects.h
+    PdfVersion.h
     PdfWriter.h
     PdfXObject.h
     PdfXRef.h
