--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,13 +214,18 @@ IF(USE_STLPORT)
 ENDIF(USE_STLPORT)
 
 IF(WANT_FONTCONFIG)
-	FIND_PACKAGE(LIBFONTCONFIG REQUIRED)
+	FIND_PACKAGE(FONTCONFIG REQUIRED)
 	ADD_DEFINITIONS(-DHAVE_FONTCONFIG)
 	SET(PODOFO_LIB_FONTCONFIG:STRING fontconfig)
+	IF(FONTCONFIG_FOUND)
+	  MESSAGE("Found fontconfig headers in ${FONTCONFIG_INCLUDE_DIR}, library at ${FONTCONFIG_LIBRARIES}")
+	ELSE(FONTCONFIG_FOUND)
+	  MESSAGE("Could not find fontconfig.")
+        ENDIF(FONTCONFIG_FOUND)
 ELSE(WANT_FONTCONFIG)
 	# Might as well look for it anyway. This also sets the appropriate
 	# variables to empty values.
-	FIND_PACKAGE(LIBFONTCONFIG)
+	FIND_PACKAGE(FONTCONFIG)
 	SET(PODOFO_LIB_FONTCONFIG:STRING)
 ENDIF(WANT_FONTCONFIG)
 
@@ -288,11 +293,10 @@ SET(PODOFO_LIB_DEPENDS
     ${stlport_libraries_if_use_stlport}
     )
 
-IF(LIBFONTCONFIG_FOUND AND WANT_FONTCONFIG)
-	SET(PODOFO_LIB_DEPENDS ${LIBFONTCONFIG_LIB} ${PODOFO_LIB_DEPENDS})
-	INCLUDE_DIRECTORIES(${LIBFONTCONFIG_H})
-ENDIF(LIBFONTCONFIG_FOUND AND WANT_FONTCONFIG)
-
+IF(FONTCONFIG_FOUND AND WANT_FONTCONFIG)
+  SET(PODOFO_LIB_DEPENDS ${FONTCONFIG_LIBRARIES} ${PODOFO_LIB_DEPENDS})
+  INCLUDE_DIRECTORIES(${FONTCONFIG_INCLUDE_DIR})
+ENDIF(FONTCONFIG_FOUND AND WANT_FONTCONFIG)
 
 SET(PODOFO_LIB
     podofo
