Introduce PdfTilingPattern and PdfTriangleShadingPattern (FreeForm)
The PdfTriangleShadingPattern is a simplified version of FreeForm shading pattern,
for one triangle only, while PDF itself supports multiple triangles.


git-svn-id: http://svn.code.sf.net/p/podofo/code/podofo/branches/_dev@1535 e6e4d1b7-ffb3-4f57-9d89-6d52b3892af5

--- a/zyx_integration/src/CMakeLists.txt
+++ b/zyx_integration/src/CMakeLists.txt
@@ -97,6 +97,7 @@ SET(PODOFO_DOC_SOURCES
   doc/PdfSignOutputDevice.cpp
   doc/PdfStreamedDocument.cpp
   doc/PdfTable.cpp
+  doc/PdfTilingPattern.cpp
   doc/PdfXObject.cpp
   doc/PdfCMapEncoding.cpp
   )
@@ -216,6 +217,7 @@ SET(PODOFO_DOC_HEADERS
   doc/PdfSignOutputDevice.h
   doc/PdfStreamedDocument.h
   doc/PdfTable.h
+  doc/PdfTilingPattern.h
   doc/PdfXObject.h
   doc/PdfCMapEncoding.h
   )
